...
}

@Preview(showBackground = true)
@Composable
fun PreviewResultsList() {
    val results = ArrayList<ResultDescription>()
    results.add(ResultDescription("2 + 2 = 4", ResultStatus.CORRECT))
    results.add(ResultDescription("3 + 3 ≠ 5", ResultStatus.INCORRECT))
    results.add(ResultDescription("3 + 3 = ?", ResultStatus.NOT_RECOGNIZED))

    AppTheme {
        Surface {
            ResultsList(results)
...
